tests/fixtures/syntax/valid/write_step_longer_closing_fence.repor
case "write step longer closing fence" {
  write <"a.txt"> ```
    hello
    ````
  $ true
  assert {
    exit 0
  }
}
