tests/fixtures/syntax/invalid/write_step_closing_fence_inline_comment.repor
case "write step closing fence inline comment is rejected" {
  write "a.txt" ```
    hello
    ``` # comment
  $ true
  assert {
    exit 0
  }
}
